Fix a couple of potential null errors